exports[`BpkStarRating should render correctly if you give it more than the max rating allowed 1`] = `
<div
  aria-label="Rated 7 out of 5 stars"
  className="bpk-star-rating">
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
</div>
`;

exports[`BpkStarRating should render correctly with "large" attribute 1`] = `
<div
  aria-label="Rated 5 out of 5 stars"
  className="bpk-star-rating">
  <withRtlSupport(BpkStar)
    className={null}
    large={true}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={true}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={true}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={true}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={true}
    type="full" />
</div>
`;

exports[`BpkStarRating should render correctly with "maxRating" attribute 1`] = `
<div
  aria-label="Rated 5 out of 8 stars"
  className="bpk-star-rating">
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
</div>
`;

exports[`BpkStarRating should render correctly with 0 stars 1`] = `
<div
  aria-label="Rated 0 out of 5 stars"
  className="bpk-star-rating">
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
</div>
`;

exports[`BpkStarRating should render correctly with 3 stars 1`] = `
<div
  aria-label="Rated 3 out of 5 stars"
  className="bpk-star-rating">
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
</div>
`;

exports[`BpkStarRating should render correctly with 3.5 stars 1`] = `
<div
  aria-label="Rated 3.5 out of 5 stars"
  className="bpk-star-rating">
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="half" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="empty" />
</div>
`;

exports[`BpkStarRating should render correctly with 5 stars 1`] = `
<div
  aria-label="Rated 5 out of 5 stars"
  className="bpk-star-rating">
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
  <withRtlSupport(BpkStar)
    className={null}
    large={false}
    type="full" />
</div>
`;
